--- a/src/app/modules/exam/by-patient-id/by-patient-id.component.html
+++ b/src/app/modules/exam/by-patient-id/by-patient-id.component.html
@@ -1,20 +1,21 @@
+<h1>hk;;ln</h1>
 <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label> 
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input>
+    <!-- <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input> -->
   </mat-form-field>
   
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
-    <!-- Position Column -->
+    
     <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <th mat-header-cell *matHeaderCellDef> examination date </th>
+      <td mat-cell *matCellDef="let element"> {{element.examinationDate}} </td>
     </ng-container>
   
-    <!-- Name Column -->
+    
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <th mat-header-cell *matHeaderCellDef> doctor id </th>
+      <td mat-cell *matCellDef="let element"> {{element.doctorId}} </td>
     </ng-container>
   
     <!-- Weight Column -->
@@ -33,9 +34,9 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   
     <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
+    <!-- <tr class="mat-row" *matNoDataRow>
       <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
+    </tr> -->
   </table>
    
   
