--- a/src/app/modules/exam/by-doctor-id/by-doctor-id.component.html
+++ b/src/app/modules/exam/by-doctor-id/by-doctor-id.component.html
@@ -1,11 +1,3 @@
-<mat-form-field appearance="fill">
-  <mat-label>choose patients: </mat-label>
-  <mat-select [(ngModel)]="selectedValue" name="patient">
-    <mat-option *ngFor="let p of patientsOfUser" [value]="p.firstName +' ' +p.lastName+' '+p.idNumber">
-      {{p.firstName +' ' +p.lastName+' '+p.idNumber}}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
 <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label> 
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input>
@@ -23,17 +15,17 @@
       <td mat-cell *matCellDef="let element; index as i"> {{element.examinationDate}} </td>
     </ng-container>
     
-    <ng-container matColumnDef="doctor id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> doctor id </th>
-      <td mat-cell *matCellDef="let element"> {{element.doctorId}} </td>
+    <ng-container matColumnDef="patient id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> patient id </th>
+      <td mat-cell *matCellDef="let element"> {{element.patientId}} </td>
     </ng-container>
   
-    <!-- Weight Column -->
-    <ng-container matColumnDef="result">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> result </th>
-      <td mat-cell *matCellDef="let element"> 123 </td>
-    </ng-container>
+    
   
+    <ng-container matColumnDef="btn-edit">
+        <!-- <th mat-header-cell *matHeaderCellDef mat-sort-header> result </th> -->
+        <td mat-cell *matCellDef="let element"> <button>edit</button> </td>
+      </ng-container>
    
   
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr> 
