--- a/src/app/modules/user/log-in/log-in.component.css
+++ b/src/app/modules/user/log-in/log-in.component.css
@@ -146,6 +146,35 @@ html {
   }
   
   
+  input[type=password] {
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 85%;
+    border: 2px solid #f6f6f6;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+  }
+  
+  input[type=password]:focus {
+    background-color: #fff;
+    border-bottom: 2px solid #5fbae9;
+  }
+  
+  input[type=password]:placeholder {
+    color: #cccccc;
+  }
   
   /* ANIMATIONS */
   
@@ -260,4 +289,20 @@ html {
   #icon {
     width:60%;
   }
+ .example-container .mat-form-field + .mat-form-field {
+    margin-left: 8px;
+  }
   
+
+  /* .example-right-align {
+    text-align: right;
+  }
+  input.example-right-align::-webkit-outer-spin-button,
+
+  input.example-right-align::-webkit-inner-spin-button {
+    display: none;
+  }
+  
+  input.example-right-align {
+    -moz-appearance: textfield;
+  } */
