--- a/src/app/modules/exam/by-lab-id/by-lab-id.component.html
+++ b/src/app/modules/exam/by-lab-id/by-lab-id.component.html
@@ -9,7 +9,7 @@
     <!-- examDate Column -->
     <ng-container matColumnDef="examDate">
         <th mat-header-cell *matHeaderCellDef> examinationDate </th>
-        <td mat-cell *matCellDef="let element; index as i"> {{element.examinationDate}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.examinationDate}} </td>
     </ng-container>
 
     <!-- computerDiagnosis Column -->
