nav in doctor component

--- a/src/app/modules/exam/by-doctor-id/by-doctor-id.component.css
+++ b/src/app/modules/exam/by-doctor-id/by-doctor-id.component.css
@@ -6,3 +6,9 @@ table {
     font-size: 14px;
     width: 100%;
   }
+
+  .example-action-button {
+    margin-top: 8px;
+    margin-right: 8px;
+  }
+  
