--- a/src/app/modules/user/log-in/log-in.component.css
+++ b/src/app/modules/user/log-in/log-in.component.css
@@ -306,3 +306,10 @@ html {
   input.example-right-align {
     -moz-appearance: textfield;
   } */
+
+ 
+  .example-action-button {
+    margin-top: 8px;
+    margin-right: 8px;
+  }
+  
