--- a/src/app/modules/user/log-in/log-in.component.html
+++ b/src/app/modules/user/log-in/log-in.component.html
@@ -2,46 +2,37 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<nav mat-tab-nav-bar>
-  <a mat-tab-link *ngFor="let link of links"
-     (click)="activeLink = link"
-     [active]="activeLink == link"> {{link}} </a>
-</nav>
-
 
 <div class="wrapper fadeInDown">
-  <div id="formContent">
-    <!-- Tabs Titles -->
+    <div id="formContent">
+        <!-- Tabs Titles -->
 
-    <!-- Icon -->
-    <div class="fadeIn first">
-      <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
-    </div>
+        <!-- Icon -->
+        <div class="fadeIn first">
+            <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
+        </div>
 
-    <!-- Login Form -->
-    <form [formGroup]="loginForm">
-      <input type="text" id="login" class="fadeIn second" name="login" placeholder="user name" name="userName"
-        formControlName="email" #id>
+        <!-- Login Form -->
+        <form [formGroup]="loginForm">
+            <input type="text" id="login" class="fadeIn second" name="login" placeholder="user name" name="userName" formControlName="email" #id>
 
-      <!-- <input type="text" id="password" class="fadeIn third" name="login" > -->
+            <!-- <input type="text" id="password" class="fadeIn third" name="login" > -->
 
 
-      <!-- <mat-label>Enter your password</mat-label> -->
-      <input id="password" class="fadeIn third" name="login" placeholder="password" formControlName="password" #password
-        matInput [type]="hide ? 'password' : 'text'">
-      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-        [attr.aria-pressed]="hide">
+            <!-- <mat-label>Enter your password</mat-label> -->
+            <input id="password" class="fadeIn third" name="login" placeholder="password" formControlName="password" #password matInput [type]="hide ? 'password' : 'text'">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
       </button>
-    
 
-      <input type="submit" class="fadeIn fourth" value="Log In" (click)="LogIn(id.value,password.value)">
-    </form>
 
-    <!-- Remind Passowrd -->
-    <div id="formFooter">
-      <a class="underlineHover" href="#">Forgot Password?</a>
+            <input type="submit" class="fadeIn fourth" value="Log In" (click)="LogIn(id.value,password.value)">
+        </form>
+
+        <!-- Remind Passowrd -->
+        <div id="formFooter">
+            <a class="underlineHover" href="#">Forgot Password?</a>
+        </div>
+
     </div>
-
-  </div>
 </div>
