--- a/src/app/modules/exam/by-doctor-id/by-doctor-id.component.html
+++ b/src/app/modules/exam/by-doctor-id/by-doctor-id.component.html
@@ -1,51 +1,67 @@
 <nav mat-tab-nav-bar>
-  <a mat-tab-link *ngFor="let link of links"
-     (click)="activeLink = link;navigator()"    
-     [active]="activeLink == link"> {{link}} </a>
+    <a mat-tab-link *ngFor="let link of links" (click)="activeLink = link;navigator()" [active]="activeLink == link"> {{link}} </a>
 </nav>
 
 
 
 <mat-form-field appearance="standard">
-    <mat-label>Filter</mat-label> 
+    <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input>
-   </mat-form-field>
-  
-  <table mat-table  class="mat-elevation-z8" [dataSource]="dataSource" matSort>
-  
+</mat-form-field>
+
+<table mat-table class="mat-elevation-z8" [dataSource]="dataSource" matSort>
+
     <ng-container matColumnDef="index">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      </th>
-      <td mat-cell *matCellDef="let element; index as i"> {{i}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        </th>
+        <td mat-cell *matCellDef="let element; index as i"> {{i}} </td>
     </ng-container>
     <ng-container matColumnDef="examination date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> examination date </th>
-      <td mat-cell *matCellDef="let element; index as i"> {{element.examinationDate}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> examination date </th>
+        <td mat-cell *matCellDef="let element; index as i"> {{element.examinationDate}} </td>
     </ng-container>
-    
+
     <ng-container matColumnDef="patient id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> patient id </th>
-      <td mat-cell *matCellDef="let element"> {{element.patientId}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> patient id </th>
+        <td mat-cell *matCellDef="let element"> {{element.patientId}} </td>
     </ng-container>
-  
-    
-  
+
+    <ng-container matColumnDef="labyrinth_comments">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>labyrinth_comments </th>
+        <td mat-cell *matCellDef="let element"> {{element.labyrinth_comments}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="labyrinth_diagnosis">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> labyrinth_diagnosis </th>
+        <td mat-cell *matCellDef="let element"> {{element.labyrinth_diagnosis}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="doctor_comments">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> doctor_comments </th>
+        <td mat-cell *matCellDef="let element"> {{element.doctor_comments}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="result">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> result </th>
+        <td mat-cell *matCellDef="let element"> {{element.result}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="btn-edit">
         <!-- <th mat-header-cell *matHeaderCellDef mat-sort-header> result </th> -->
         <td mat-cell *matCellDef="let element"> <button>edit</button> </td>
-      </ng-container>
-   
-  
-     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr> 
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> -->
-  
+
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
     </tr>
-  </table>
-  
-  
-  <!-- Copyright 2022 Google LLC. All Rights Reserved.
+</table>
+
+
+<!-- Copyright 2022 Google LLC. All Rights Reserved.
       Use of this source code is governed by an MIT-style license that
       can be found in the LICENSE file at https://angular.io/license -->
