--- a/src/app/modules/exam/by-patient-id/by-patient-id.component.html
+++ b/src/app/modules/exam/by-patient-id/by-patient-id.component.html
@@ -1,51 +1,51 @@
-<mat-form-field appearance="fill">
-  <mat-label>choose patients: </mat-label>
-  <mat-select [(ngModel)]="selectedValue" name="patient">
-    <mat-option *ngFor="let p of patientsOfUser" [value]="p.firstName +' ' +p.lastName+' '+p.idNumber">
-      {{p.firstName +' ' +p.lastName+' '+p.idNumber}}
-    </mat-option>
-  </mat-select>
+<!-- <mat-form-field appearance="fill">
+    <mat-label>choose patients: </mat-label>
+    <mat-select [(ngModel)]="selectedValue" name="patient">
+        <mat-option *ngFor="let p of patientsOfUser" [value]="p.firstName +' ' +p.lastName+' '+p.idNumber">
+            {{p.firstName +' ' +p.lastName+' '+p.idNumber}}
+        </mat-option>
+    </mat-select>
 </mat-form-field>
 <mat-form-field appearance="standard">
-    <mat-label>Filter</mat-label> 
+    <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input>
-   </mat-form-field>
-  
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-  
+</mat-form-field> -->
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+
     <ng-container matColumnDef="index">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      </th>
-      <td mat-cell *matCellDef="let element; index as i"> {{i}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        </th>
+        <td mat-cell *matCellDef="let element; index as i"> {{i}} </td>
     </ng-container>
     <ng-container matColumnDef="examination date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> examination date </th>
-      <td mat-cell *matCellDef="let element; index as i"> {{element.examinationDate}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> examination date </th>
+        <td mat-cell *matCellDef="let element; index as i"> {{element.examinationDate}} </td>
     </ng-container>
-    
+
     <ng-container matColumnDef="doctor id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> doctor id </th>
-      <td mat-cell *matCellDef="let element"> {{element.doctorId}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> doctor id </th>
+        <td mat-cell *matCellDef="let element"> {{element.doctorId}} </td>
     </ng-container>
-  
+
     <!-- Weight Column -->
     <ng-container matColumnDef="result">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> result </th>
-      <td mat-cell *matCellDef="let element"> 123 </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> result </th>
+        <td mat-cell *matCellDef="let element"> 123 </td>
     </ng-container>
-  
-   
-  
-     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr> 
+
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> -->
-  
+
     <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
-  </table>
-  
-  
-  <!-- Copyright 2022 Google LLC. All Rights Reserved.
+    <!-- <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr> -->
+</table>
+
+
+<!-- Copyright 2022 Google LLC. All Rights Reserved.
       Use of this source code is governed by an MIT-style license that
       can be found in the LICENSE file at https://angular.io/license -->
