--- a/src/app/modules/user/add-user/add-user.component.html
+++ b/src/app/modules/user/add-user/add-user.component.html
@@ -5,25 +5,25 @@
     </mat-form-field>
 </p>
 
-<p>
-    <mat-form-field appearance="legacy">
-        <mat-label>user id</mat-label>
-        <input matInput placeholder="Placeholder">
-    </mat-form-field>
-</p>
-
-<mat-form-field appearance="fill">
-    <mat-label>Choose a date</mat-label>
+<!-- <mat-form-field appearance="fill">
+    <mat-label>Choose a birthDate</mat-label>
     <!-- #docregion toggle -->
-    <input matInput [matDatepicker]="picker">
+<!-- <input matInput [matDatepicker]="picker">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-    <!-- #enddocregion toggle -->
-</mat-form-field>
+    <mat-datepicker #picker></mat-datepicker> -->
+<!-- #enddocregion toggle -->
+<!-- </mat-form-field> -->
 
 <p>
     <mat-form-field appearance="legacy">
         <mat-label>first name</mat-label>
+        <input matInput placeholder="Placeholder">
+    </mat-form-field>
+</p>
+
+<p>
+    <mat-form-field appearance="legacy">
+        <mat-label>last name</mat-label>
         <input matInput placeholder="Placeholder">
     </mat-form-field>
 </p>
