--- a/src/app/modules/user/add-user/add-user.component.html
+++ b/src/app/modules/user/add-user/add-user.component.html
@@ -1,3 +1,4 @@
+
 <p>
     <mat-form-field appearance="legacy">
         <mat-label>id number</mat-label>
@@ -5,14 +6,14 @@
     </mat-form-field>
 </p>
 
-<!-- <mat-form-field appearance="fill">
+<mat-form-field appearance="fill">
     <mat-label>Choose a birthDate</mat-label>
     <!-- #docregion toggle -->
-<!-- <input matInput [matDatepicker]="picker">
+<!-- <input matInput [matDatepicker]="picker"> -->
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker> -->
 <!-- #enddocregion toggle -->
-<!-- </mat-form-field> -->
+</mat-form-field>
 
 <p>
     <mat-form-field appearance="legacy">
@@ -21,24 +22,14 @@
     </mat-form-field>
 </p>
 
-<<<<<<< HEAD:src/app/modules/user/add-user/add-user.component.html
-=======
 <mat-form-field appearance="fill">
     <mat-label>Choose a date</mat-label>
     <!-- #docregion toggle -->
-    <!-- <input matInput [matDatepicker]="picker"> -->
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
+     <!-- <input matInput [matDatepicker]="picker">  -->
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker> -->
     <!-- #enddocregion toggle -->
-</mat-form-field>
-
->>>>>>> e9e23825247872cb95b1de510b3d3df4c30096af:src/app/add-user/add-user.component.html
-<p>
-    <mat-form-field appearance="legacy">
-        <mat-label>last name</mat-label>
-        <input matInput placeholder="Placeholder">
-    </mat-form-field>
-</p>
+ </mat-form-field>
 
 <p>
     <mat-form-field appearance="legacy">
@@ -46,3 +37,10 @@
         <input matInput placeholder="Placeholder">
     </mat-form-field>
 </p>
+
+<p>
+    <mat-form-field appearance="legacy">
+        <mat-label>last name</mat-label>
+        <input matInput placeholder="Placeholder">
+    </mat-form-field>
+</p> --> 
