--- a/src/app/modules/user/add-user/add-user.component.html
+++ b/src/app/modules/user/add-user/add-user.component.html
@@ -5,14 +5,6 @@
     </mat-form-field>
 </p>
 
-<!-- <mat-form-field appearance="fill">
-    <mat-label>Choose a birthDate</mat-label>
-    <!-- #docregion toggle -->
-<!-- <input matInput [matDatepicker]="picker">
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker> -->
-<!-- #enddocregion toggle -->
-<!-- </mat-form-field> -->
 
 <p>
     <mat-form-field appearance="legacy">
@@ -21,28 +13,27 @@
     </mat-form-field>
 </p>
 
-<<<<<<< HEAD:src/app/modules/user/add-user/add-user.component.html
-=======
+<p>
+    <mat-form-field appearance="legacy">
+        <mat-label>last name</mat-label>
+        <input matInput placeholder="Placeholder">
+    </mat-form-field>
+</p>
+<!-- 
+<div [formGroup]="form">
+    <mat-form-field appearance="fill">
+        <mat-label>Phone number</mat-label>
+        <example-tel-input formControlName="tel" required></example-tel-input>
+        <mat-icon matSuffix>phone</mat-icon>
+        <mat-hint>Include area code</mat-hint>
+    </mat-form-field>
+</div> -->
+
 <mat-form-field appearance="fill">
-    <mat-label>Choose a date</mat-label>
-    <!-- #docregion toggle -->
-    <!-- <input matInput [matDatepicker]="picker"> -->
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-    <!-- #enddocregion toggle -->
+    <mat-label>select user kind</mat-label>
+    <mat-select [(ngModel)]="selectedValue" name="op" id="op">
+        <mat-option *ngFor="let op of options" [value]="op">
+            {{op}}
+        </mat-option>
+    </mat-select>
 </mat-form-field>
-
->>>>>>> e9e23825247872cb95b1de510b3d3df4c30096af:src/app/add-user/add-user.component.html
-<p>
-    <mat-form-field appearance="legacy">
-        <mat-label>last name</mat-label>
-        <input matInput placeholder="Placeholder">
-    </mat-form-field>
-</p>
-
-<p>
-    <mat-form-field appearance="legacy">
-        <mat-label>last name</mat-label>
-        <input matInput placeholder="Placeholder">
-    </mat-form-field>
-</p>
