--- a/src/app/modules/user/add-user/add-user.component.html
+++ b/src/app/modules/user/add-user/add-user.component.html
@@ -29,6 +29,15 @@
     </mat-form-field>
 </p>
 
+<div [formGroup]="form">
+    <mat-form-field appearance="fill">
+        <mat-label>Phone number</mat-label>
+        <example-tel-input formControlName="tel" required></example-tel-input>
+        <mat-icon matSuffix>phone</mat-icon>
+    </mat-form-field>
+</div>
+
+
 <mat-form-field appearance="fill">
     <mat-label>select user kind</mat-label>
     <mat-select [(ngModel)]="selectedValue" name="op" id="op">
