--- a/src/app/modules/exam/by-doctor-id/by-doctor-id.component.html
+++ b/src/app/modules/exam/by-doctor-id/by-doctor-id.component.html
@@ -4,7 +4,7 @@
 
 
 
-<mat-form-field appearance="standard">
+<mat-form-field appearance="fill">
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input>
 </mat-form-field>
