--- a/src/app/modules/user/add-user/add-user.component.html
+++ b/src/app/modules/user/add-user/add-user.component.html
@@ -47,26 +47,29 @@
             <input matInput placeholder="Placeholder"  >
         </mat-form-field>
     </p>
-  
-        <p>
+    <p>
+<!--        
         <mat-form-field appearance="fill"  matFormFieldControl="selectedValue">
             <mat-label>select user kind</mat-label> 
-            <!-- <input matInput placeholder="Placeholder" > -->
+             <input matInput placeholder="Placeholder" > 
            <select  name="op" id="op" > 
              <option *ngFor="let op of options" >
                 {{op}}
             </option>
         </select> 
         <input matInput placeholder="Placeholder" style="opacity: 0;">
-        </mat-form-field> 
+        </mat-form-field>  -->
      <!-- [value]="op" -->
-    </p>
-
+    <!-- </p>
+     <p>
+    <mat-form-field appearance="fill"  matFormFieldControl="selectedValue">
     <select>
         <option *ngFor="let op of options">
             {{op}}
         </option>
     </select>
+    </mat-form-field>
+    </p> -->
    
      
 </form>
