--- a/src/app/modules/exam/add-exan/add-exan.component.html
+++ b/src/app/modules/exam/add-exan/add-exan.component.html
@@ -1,4 +1,3 @@
-
 <p>
     <mat-form-field appearance="legacy">
         <mat-label>patient id</mat-label>
@@ -8,9 +7,24 @@
 
 <mat-form-field appearance="fill">
     <mat-label>add picture</mat-label>
-    <!-- #docregion toggle -->
-<!-- <input matInput [matDatepicker]="picker"> -->
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker> -->
-<!-- #enddocregion toggle -->
+
+    <div class="text-center">
+        <input class="form-control" type="file" (change)="onChange($event)">
+
+        <button (click)="onUpload()" class="btn btn-success">
+            Upload
+        </button>
+    </div>
+
+    <!-- Shareable short link of  uoloaded file -->
+    <div class="container text-center jumbotron" *ngIf="shortLink">
+        <h2> Visit Here</h2>
+        <a href="{{shortLink}}">{{shortLink}}</a>
+    </div>
+
+    <!--Flag variable is used here-->
+    <div class="container" *ngIf="loading">
+        <h3>Loading ...</h3>
+    </div>
+
 </mat-form-field>
