--- a/src/app/modules/exam/by-doctor-id/by-doctor-id.component.html
+++ b/src/app/modules/exam/by-doctor-id/by-doctor-id.component.html
@@ -48,7 +48,9 @@
 
     <ng-container matColumnDef="btn-edit">
         <!-- <th mat-header-cell *matHeaderCellDef mat-sort-header> result </th> -->
-        <td mat-cell *matCellDef="let element"> <button>edit</button> </td>
+        <td mat-cell *matCellDef="let element">
+            <button>edit</button>
+        </td>
     </ng-container>
 
 
