--- a/src/app/modules/exam/add-exan/add-exan.component.html
+++ b/src/app/modules/exam/add-exan/add-exan.component.html
@@ -8,23 +8,13 @@
 <mat-form-field appearance="fill">
     <mat-label>add picture</mat-label>
 
-    <div class="text-center">
-        <input class="form-control" type="file" (change)="onChange($event)">
-
-        <button (click)="onUpload()" class="btn btn-success">
-            Upload
-        </button>
-    </div>
-
-    <!-- Shareable short link of  uoloaded file -->
-    <div class="container text-center jumbotron" *ngIf="shortLink">
-        <h2> Visit Here</h2>
-        <a href="{{shortLink}}">{{shortLink}}</a>
-    </div>
-
-    <!--Flag variable is used here-->
-    <div class="container" *ngIf="loading">
-        <h3>Loading ...</h3>
-    </div>
-
 </mat-form-field>
+
+
+
+<div>
+    <form action="" method="post" enctype="multipart/form-data">
+        <input type="file">
+    </form>
+    <label>Choose file</label>
+</div>
