--- a/src/app/modules/user/add-patient/add-patient.component.html
+++ b/src/app/modules/user/add-patient/add-patient.component.html
@@ -1,1 +1,11 @@
-<p>add-patient works!</p>
+<!-- <p>add-patient works!</p> -->
+
+<mat-form-field appearance="fill">
+    <mat-label>Select an option</mat-label>
+    <mat-select [value]="selected">
+        <mat-option *ngFor="let user of users" (click)="selected = user">{{user}}</mat-option>
+        <a mat-button *ngFor="let u of users" (click)="selected=u">{{u}}</a>
+    </mat-select>
+</mat-form-field>
+
+<p>You selected: {{selected}}</p>
