--- a/src/app/modules/exam/add-exan/add-exam2/add-exam2.component.html
+++ b/src/app/modules/exam/add-exan/add-exam2/add-exam2.component.html
@@ -1,22 +1,17 @@
 <!-- <p-fileUpload #fubauto mode="basic" name="demo[]" url="C:\Users\user\Desktop" accept="image/*" maxFileSize="1000000" (onUpload)="onBasicUploadAuto($event)" [auto]="true" chooseLabel="Browse">p-fileUpload</p-fileUpload> -->
 
 <p-toast></p-toast>
+<button mat-raised-button color="primary">Uploade image</button>
+<!--
+<form [formGroup]="form" (submit)="onSavePost()">
+    <div>
+        <button class="file-select" type="button" (click)="filePicker.click()">Pick Image</button>
+        <input type="file" #filePicker (change)="onImagePicked($event)">
+    </div>
+    <div class="image-preview" *ngIf="imagePreview!=='' && imagePreview && form.get('image')!.valid">
+        <img [src]="imagePreview" [alt]="form.value.title">
+    </div>
+    <button color="primary" type="submit">Save File</button>
+</form>
 
-<div class="card">
-    <h5>Advanced</h5>
-    <p-fileUpload name="demo[]" url="./upload.php" (onUpload)="onUpload($event)" multiple="multiple" accept="image/*" maxFileSize="1000000">
-        <ng-template pTemplate="content">
-            <ul *ngIf="uploadedFiles.length">
-                <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
-            </ul>
-        </ng-template>
-    </p-fileUpload>
-
-    <h5>Basic</h5>
-    <p-fileUpload mode="basic" name="demo[]" url="./upload.php" accept="image/*" maxFileSize="1000000" (onUpload)="onBasicUpload($event)"></p-fileUpload>
-
-    <h5>Basic with Auto</h5>
-    <p-fileUpload #fubauto mode="basic" name="demo[]" url="./upload.php" accept="image/*" maxFileSize="1000000" (onUpload)="onBasicUploadAuto($event)" [auto]="true" chooseLabel="Browse"></p-fileUpload>
-    <p-fileUpload mode="basic" name="demo[]" url="./upload.php" accept="image/*" maxFileSize="1000000" (onUpload)="onBasicUpload($event)" [auto]="true"></p-fileUpload>
-
-</div>
+-->
