--- a/src/app/modules/user/add-patient/add-patient.component.css
+++ b/src/app/modules/user/add-patient/add-patient.component.css
@@ -1,135 +1,148 @@
 @import url("https://fonts.googleapis.com/css?family=Muli:200,300,400,600");
 body {
-  font-family: "Muli", sans-serif;
-  background: #7ddcd5;
+    font-family: "Muli", sans-serif;
+    background: #7ddcd5;
 }
+
 h5 {
-  font-weight: 600;
+    font-weight: 600;
 }
+
 .custom-wrapper {
-  max-width: 460px;
-  margin: 0 auto 50px;
+    max-width: 460px;
+    margin: 0 auto 50px;
 }
+
 .h2,
 h2 {
-  font-size: 1.45rem;
+    font-size: 1.45rem;
 }
+
 label {
-  font-size: 15px;
-  font-weight: 600;
-  color: #222;
-  margin-bottom: 6px;
+    font-size: 15px;
+    font-weight: 600;
+    color: #222;
+    margin-bottom: 6px;
 }
+
 .group-gap {
-  margin-bottom: 40px;
+    margin-bottom: 40px;
 }
+
 .btn.focus,
 .btn:focus,
 .form-control:focus,
 .custom-select:focus,
 .custom-select:focus {
-  box-shadow: none;
+    box-shadow: none;
 }
+
 .form-control:focus,
 .custom-select:focus {
-  border: 1px solid #f63240;
+    border: 1px solid #f63240;
 }
 
-.btn-group-lg > .btn,
+.btn-group-lg>.btn,
 .btn-lg {
-  padding: 13px 15px 15px;
-  font-size: 16px;
-  border-radius: 0;
+    padding: 13px 15px 15px;
+    font-size: 16px;
+    border-radius: 0;
 }
+
 .form-control {
-  height: auto;
-  padding: 15px;
-  font-size: 14px;
-  color: #fff;
-  border-radius: 0;
-  background: #fbbe02;
-  border: 1px solid #f63240;
+    height: auto;
+    padding: 15px;
+    font-size: 14px;
+    color: #fff;
+    border-radius: 0;
+    background: #fbbe02;
+    border: 1px solid #f63240;
 }
+
 .custom-select {
-  height: auto;
-  padding: 15px;
-  font-size: 26px;
-  cursor: pointer;
-  font-weight: 400;
-  color: #000;
-  background-color: #fbbe02;
-  border: 2px solid #000;
+    height: auto;
+    padding: 15px;
+    font-size: 26px;
+    cursor: pointer;
+    font-weight: 400;
+    color: #000;
+    background-color: #fbbe02;
+    border: 2px solid #000;
 }
-.custom-control-input:checked ~ .custom-control-label::before {
-  border-color: #e91e63;
-  background-color: #e91e63;
+
+.custom-control-input:checked~.custom-control-label::before {
+    border-color: #e91e63;
+    background-color: #e91e63;
 }
-.custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: none;
+
+.custom-control-input:focus~.custom-control-label::before {
+    box-shadow: none;
 }
+
 .custom-control-label {
-  cursor: pointer;
+    cursor: pointer;
 }
+
 .error:focus,
 .error {
-  border-color: #e91e63;
-  color: #e91e63;
-}
-.invalid-feedback {
-  color: #e91e63;
-}
-.btn-danger,
-body .btn-danger:hover {
-  background: #f63240;
-  border-color: #f63240;
-  color: #fff;
+    border-color: #e91e63;
+    color: #e91e63;
 }
 
+.invalid-feedback {
+    color: #e91e63;
+}
+
+.btn-danger,
+body .btn-danger:hover {
+    background: #f63240;
+    border-color: #f63240;
+    color: #fff;
+}
 
 
 /* BASIC */
 
 html {
     background-color: #56baed;
-  }
-  
-  body {
+}
+
+body {
     font-family: "Poppins", sans-serif;
     height: 100vh;
-  }
-  
-  a {
+}
+
+a {
     color: #92badd;
-    display:inline-block;
+    display: inline-block;
     text-decoration: none;
     font-weight: 400;
-  }
-  
-  h2 {
+}
+
+h2 {
     text-align: center;
     font-size: 16px;
     font-weight: 600;
     text-transform: uppercase;
-    display:inline-block;
-    margin: 40px 8px 10px 8px; 
+    display: inline-block;
+    margin: 40px 8px 10px 8px;
     color: #cccccc;
-  }
-  
-  
-  
-  /* STRUCTURE */
-  
-  .wrapper {
+}
+
+
+/* STRUCTURE */
+
+.wrapper {
     display: flex;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     min-height: 100%;
     padding: 20px;
-  }
-  
-  #formContent {
+}
+
+#formContent {
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
     background: #fff;
@@ -138,38 +151,38 @@ html {
     max-width: 450px;
     position: relative;
     padding: 0px;
-    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
     text-align: center;
-  }
-  
-  #formFooter {
+}
+
+#formFooter {
     background-color: #f6f6f6;
     border-top: 1px solid #dce8f1;
     padding: 25px;
     text-align: center;
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
-  }
-  
-  
-  
-  /* TABS */
-  
-  h2.inactive {
+}
+
+
+/* TABS */
+
+h2.inactive {
     color: #cccccc;
-  }
-  
-  h2.active {
+}
+
+h2.active {
     color: #0d0d0d;
     border-bottom: 2px solid #5fbae9;
-  }
-  
-  
-  
-  /* FORM TYPOGRAPHY*/
-  
-  input[type=button], input[type=submit], input[type=reset]  {
+}
+
+
+/* FORM TYPOGRAPHY*/
+
+input[type=button],
+input[type=submit],
+input[type=reset] {
     background-color: #56baed;
     border: none;
     color: white;
@@ -179,8 +192,8 @@ html {
     display: inline-block;
     text-transform: uppercase;
     font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+    box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
     margin: 5px 20px 40px 20px;
@@ -189,21 +202,25 @@ html {
     -ms-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-  }
-  
-  input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+}
+
+input[type=button]:hover,
+input[type=submit]:hover,
+input[type=reset]:hover {
     background-color: #39ace7;
-  }
-  
-  input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+}
+
+input[type=button]:active,
+input[type=submit]:active,
+input[type=reset]:active {
     -moz-transform: scale(0.95);
     -webkit-transform: scale(0.95);
     -o-transform: scale(0.95);
     -ms-transform: scale(0.95);
     transform: scale(0.95);
-  }
-  
-  input[type=text] {
+}
+
+input[type=text] {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
@@ -222,19 +239,18 @@ html {
     transition: all 0.5s ease-in-out;
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
-  }
-  
-  input[type=text]:focus {
+}
+
+input[type=text]:focus {
     background-color: #fff;
     border-bottom: 2px solid #5fbae9;
-  }
-  
-  input[type=text]:placeholder {
+}
+
+input[type=text]:placeholder {
     color: #cccccc;
-  }
-  
-  
-  input[type=password] {
+}
+
+input[type=password] {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
@@ -253,101 +269,129 @@ html {
     transition: all 0.5s ease-in-out;
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
-  }
-  
-  input[type=password]:focus {
+}
+
+input[type=password]:focus {
     background-color: #fff;
     border-bottom: 2px solid #5fbae9;
-  }
-  
-  input[type=password]:placeholder {
+}
+
+input[type=password]:placeholder {
     color: #cccccc;
-  }
-  
-  /* ANIMATIONS */
-  
-  /* Simple CSS3 Fade-in-down Animation */
-  .fadeInDown {
+}
+
+
+/* ANIMATIONS */
+
+
+/* Simple CSS3 Fade-in-down Animation */
+
+.fadeInDown {
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-  }
-  
-  @-webkit-keyframes fadeInDown {
+}
+
+@-webkit-keyframes fadeInDown {
     0% {
-      opacity: 0;
-      -webkit-transform: translate3d(0, -100%, 0);
-      transform: translate3d(0, -100%, 0);
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
     }
     100% {
-      opacity: 1;
-      -webkit-transform: none;
-      transform: none;
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
     }
-  }
-  
-  @keyframes fadeInDown {
+}
+
+@keyframes fadeInDown {
     0% {
-      opacity: 0;
-      -webkit-transform: translate3d(0, -100%, 0);
-      transform: translate3d(0, -100%, 0);
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
     }
     100% {
-      opacity: 1;
-      -webkit-transform: none;
-      transform: none;
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
     }
-  }
-  
-  /* Simple CSS3 Fade-in Animation */
-  @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  
-  .fadeIn {
-    opacity:0;
-    -webkit-animation:fadeIn ease-in 1;
-    -moz-animation:fadeIn ease-in 1;
-    animation:fadeIn ease-in 1;
-  
-    -webkit-animation-fill-mode:forwards;
-    -moz-animation-fill-mode:forwards;
-    animation-fill-mode:forwards;
-  
-    -webkit-animation-duration:1s;
-    -moz-animation-duration:1s;
-    animation-duration:1s;
-  }
-  
-  .fadeIn.first {
+}
+
+
+/* Simple CSS3 Fade-in Animation */
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    opacity: 0;
+    -webkit-animation: fadeIn ease-in 1;
+    -moz-animation: fadeIn ease-in 1;
+    animation: fadeIn ease-in 1;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.fadeIn.first {
     -webkit-animation-delay: 0.4s;
     -moz-animation-delay: 0.4s;
     animation-delay: 0.4s;
-  }
-  
-  .fadeIn.second {
+}
+
+.fadeIn.second {
     -webkit-animation-delay: 0.6s;
     -moz-animation-delay: 0.6s;
     animation-delay: 0.6s;
-  }
-  
-  .fadeIn.third {
+}
+
+.fadeIn.third {
     -webkit-animation-delay: 0.8s;
     -moz-animation-delay: 0.8s;
     animation-delay: 0.8s;
-  }
-  
-  .fadeIn.fourth {
+}
+
+.fadeIn.fourth {
     -webkit-animation-delay: 1s;
     -moz-animation-delay: 1s;
     animation-delay: 1s;
-  }
-  
-  /* Simple CSS3 Fade-in Animation */
-  .underlineHover:after {
+}
+
+
+/* Simple CSS3 Fade-in Animation */
+
+.underlineHover:after {
     display: block;
     left: 0;
     bottom: -10px;
@@ -356,33 +400,33 @@ html {
     background-color: #56baed;
     content: "";
     transition: width 0.2s;
-  }
-  
-  .underlineHover:hover {
-    color: #0d0d0d;
-  }
-  
-  .underlineHover:hover:after{
-    width: 100%;
-  }
-  
-  
-  
-  /* OTHERS */
-  
-  *:focus {
-      outline: none;
-  } 
-  
-  #icon {
-    width:60%;
-  }
- .example-container .mat-form-field + .mat-form-field {
-    margin-left: 8px;
-  }
-  
+}
 
-  /* .example-right-align {
+.underlineHover:hover {
+    color: #0d0d0d;
+}
+
+.underlineHover:hover:after {
+    width: 100%;
+}
+
+
+/* OTHERS */
+
+*:focus {
+    outline: none;
+}
+
+#icon {
+    width: 60%;
+}
+
+.example-container .mat-form-field+.mat-form-field {
+    margin-left: 8px;
+}
+
+
+/* .example-right-align {
     text-align: right;
   }
   input.example-right-align::-webkit-outer-spin-button,
@@ -395,11 +439,31 @@ html {
     -moz-appearance: textfield;
   } */
 
- 
-  .example-action-button {
+.example-action-button {
     margin-top: 8px;
     margin-right: 8px;
-  }
-  
+}
 
+.wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    min-height: 100%;
+    padding: 20px;
+}
 
+#formContent {
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    background: #fff;
+    padding: 30px;
+    width: 90%;
+    max-width: 450px;
+    position: relative;
+    padding: 0px;
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
