--- a/src/app/modules/user/add-patient/add-patient.component.css
+++ b/src/app/modules/user/add-patient/add-patient.component.css
@@ -467,3 +467,17 @@ input[type=password]:placeholder {
     box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
     text-align: center;
 }
+
+.example-form-field {
+    margin-right: 20px;
+  }
+
+  .example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
