--- a/src/app/modules/exam/by-lab-id/by-lab-id.component.html
+++ b/src/app/modules/exam/by-lab-id/by-lab-id.component.html
@@ -45,7 +45,7 @@
     <ng-container matColumnDef="addPicture">
         <th mat-header-cell *matHeaderCellDef> add picture </th>
         <td mat-cell>
-            <button>upload picture</button>
+            <button (click)="addFile()">upload picture</button>
         </td>
     </ng-container>
 
